--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 body {
-    font-family: 'Arial', sans-serif;
-    margin: 20px;
-    padding: 20px;
-    background-color: #333;
-    color: #fff;
+    background-color: #282c34;
+    color: #abb2bf;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 h1, h2, h3 {
@@ -23,70 +21,23 @@ p {
 ul, ol {
     margin-bottom: 20px;
 }
-
-/* code {
-    background: #1f1f1f;
-    color: #fff;
-    padding: 2px 5px;
-    border: 1px solid #1f1f1f;
-    border-radius: 4px;
-    font-family: 'Courier New', Courier, monospace;
-}
-code .comment{
-    color: #6a9955;
-}
-code .tag-name{
-    color: #286ccc;
-}
-code .attribute{
-    color: #51bbfe;
-}
-code .value{
-    color: #9b361f;
-}
-
 pre {
-    background-color: #1f1f1f;
+    background-color: #282c34;
     padding: 10px;
-    border: 1px solid #ced4da;
-    border-radius: 4px;
-    overflow-x: auto;
-} */
-pre {
-    background-color: #333;
-    padding: 20px;
     border-radius: 5px;
-    box-shadow: inset 0 4px 8px rgba(255, 255, 255, 0.1);
-    overflow-x: auto;
+    box-shadow: inset 0 0 5px #f0f0f0;
 }
-
-
-code {
-    display: block;
-    white-space: pre;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 14px;
-    line-height: 1.5;
-    color: #fff;
-}
-code a {
-    color: inherit;
-}
-
-.comment {
-    color: #888;
-}
-
 .tag-name {
-    color: #0f9d58;
+    color: #e06c75;
 }
-
 .attribute {
-    color: #ffa07a;
+    color: #d19a66;
 }
-
 .value {
-    color: #7ec8e3;
+    color: #61afef;
+}
+.comment {
+    color: #5c6370;
 }
 
 a {
