--- a/style.css
+++ b/style.css
@@ -27,6 +27,14 @@ pre {
     border-radius: 5px;
     box-shadow: inset 0 0 5px #f0f0f0;
 }
+code{
+    position: relative;
+    display: block;
+    word-break: break-all;
+    width: 100%;
+    box-sizing: border-box;
+    overflow-x: scroll;
+}
 .tag-name {
     color: #e06c75;
 }
