--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
     background-color: #282c34;
     color: #abb2bf;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 25px;
+    font-size: 1.1em;
 }
 
 h1, h2, h3 {
@@ -24,10 +26,11 @@ p {
 }
 
 ul, ol {
+    padding: 20px;
     margin-bottom: 20px;
 }
 pre {
-    background-color: #282c34;
+    background-color: #1b1e22;
     padding: 10px;
     border-radius: 5px;
     box-shadow: inset 0 0 5px #f0f0f0;
@@ -35,7 +38,6 @@ pre {
 code{
     position: relative;
     display: block;
-    word-break: break-all;
     width: 100%;
     box-sizing: border-box;
     overflow-x: auto;
