--- a/style.css
+++ b/style.css
@@ -30,10 +30,11 @@ ul, ol {
     margin-bottom: 20px;
 }
 pre {
+    margin-top: 20px;
     background-color: #1b1e22;
     padding: 10px;
     border-radius: 5px;
-    box-shadow: inset 0 0 5px #f0f0f0;
+    border: 1px solid #8080809a;
 }
 code{
     position: relative;
