--- a/player.css
+++ b/player.css
@@ -1,4 +1,8 @@
 .player {
+    font-family: system-ui, -apple-system, 
+    BlinkMacSystemFont, 'Segoe UI', 
+    Roboto, Oxygen, Ubuntu, Cantarell, 
+    'Open Sans', 'Helvetica Neue', sans-serif;
     color: #f0f0f0;
     position: relative;
     background: #80808062;
