--- a/player.css
+++ b/player.css
@@ -291,7 +291,7 @@ ocho.paused .caption-text {
     height: 200%;
     aspect-ratio: 1;
     top: -50%;
-    left: calc(var(--progress-position) * 100%);
+    left: calc(var(--progress-position, 0) * 100%);
     background: dodgerblue;
     border-radius: 50%;
     transition: transform 150ms ease-in-out;
