--- a/style.css
+++ b/style.css
@@ -3,8 +3,11 @@
     padding: 0;
     box-sizing: border-box;
 }
+html{
+    color-scheme: light dark;
+}
 body {
-    background-color: #282c34;
+    background-color: #010c16;
     color: #abb2bf;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 25px;
@@ -25,7 +28,7 @@ p {
     line-height: 1.6;
 }
 
-ul, ol {
+.list {
     padding: 20px;
     margin-bottom: 20px;
 }
@@ -35,30 +38,54 @@ pre {
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #8080809a;
+    outline: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.25em;
 }
 code{
     position: relative;
-    display: block;
     width: 100%;
     box-sizing: border-box;
     overflow-x: auto;
 }
+code> *{
+    position: relative;
+    width: 100%;
+    text-wrap: balance;
+}
 code a{
     color: inherit;
 }
+/* .tag::before{
+    content: '<';
+}
+.tag::after{
+    content: '>';
+} */
 .tag-name {
-    color: #e06c75;
+    color: #9effff;
+    position: relative;
 }
 .attribute {
-    color: #d19a66;
+    color: #f3a135;
 }
 .value {
-    color: #61afef;
+    color: #76f390;
 }
+/* .value::before,
+.value::after {
+    content: '"';
+} */
 .comment {
-    color: #5c6370;
+    color: #0088fa;
 }
-
+ocho{
+    margin-top: 30px;
+    outline: 3px solid #0088fa;
+    border-radius: .2em;
+}
 a {
     color: #007BFF;
 }
