--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ ocho{
     margin-top: 30px;
     outline: 3px solid #0088fa;
     border-radius: .2em;
+    max-width: 800px;
 }
 a {
     color: #007BFF;
