--- a/player.css
+++ b/player.css
@@ -8,6 +8,7 @@ ocho {
     background: #80808062;
     width: 90%;
     min-width: 150px;
+    aspect-ratio: var(--video-ratio, 16/9);
     border-radius: 10px;
     display: flex;
     justify-content: center;
@@ -401,11 +402,11 @@ ocho.paused .caption-text {
 }
 
 .auto-play {
-    width: 27px;
-    height: 12px;
+    width: 24px;
+    height: 13px;
     border-radius: 20px;
     position: relative;
-    background: #808080cc;
+    background: #909090cc;
     font-size: 10px;
     font-size: 0.8em;
 }
@@ -417,20 +418,20 @@ ocho.paused .caption-text {
     right: 15px;
     top: 50%;
     transform: translateY(-50%);
-    width: 15px;
-    height: 15px;
+    width: 16px;
+    height: 16px;
     aspect-ratio: 1;
     font-size: 10px;
     color: #fff;
-    background: #606060;
+    background: #505050;
+    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 50%;
     font-family: "Ocho";
-    padding: 1px;
     cursor: pointer;
-    transition: right 150ms ease-in-out;
+    transition: 150ms ease-in-out;
 }
 
 .auto-play.active::before {
