--- a/player.css
+++ b/player.css
@@ -1,47 +1,60 @@
-ocho {
-    font-family: system-ui, -apple-system, 
-    BlinkMacSystemFont, 'Segoe UI', 
-    Roboto, Oxygen, Ubuntu, Cantarell, 
-    'Open Sans', 'Helvetica Neue', sans-serif;
+.ocho-player-container a {
+    text-decoration: none;
+  }
+  
+  ocho-player {
+    display: block;
+    width: 90%;
+    aspect-ratio: var(--video-ratio, 16/9);
+    max-height: 80vh;
+    background: #00000040;
+  }
+  .ocho-player-container,
+  .ocho-player-container * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+  .ocho-player-container {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+      Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     color: #f0f0f0;
     position: relative;
-    background: #80808062;
-    width: 90%;
-    min-width: 150px;
+    min-width: 10rem;
+    max-width: 100%;
+    max-height: 100%;
     aspect-ratio: var(--video-ratio, 16/9);
-    border-radius: 10px;
+    border-radius: inherit;
     display: flex;
     justify-content: center;
     margin-inline: auto;
-    background: #000000dd;
     transition: 150ms ease-in-out;
-}
-ocho *{
+  }
+  .ocho-player-container * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-
-ocho.fullscreen,
-.player.fullscreen,
-ocho.cinema,
-.player.cinema {
+  }
+  
+  .ocho-player-container.fullscreen,
+  .player.fullscreen,
+  ocho-player.cinema {
     max-width: initial;
     width: 100%;
+    display: block;
     transition: 150ms ease-in-out;
     border-radius: 0;
-}
-
-ocho.cinema,
-.player.cinema {
+  }
+  
+  .ocho-player-container.cinema,
+  .player.cinema {
     max-height: 80vh;
-}
-ocho.fullscreen,
-.player.fullscreen {
+  }
+  .ocho-player-container.fullscreen,
+  .player.fullscreen {
     max-height: 100vh;
-}
-.light {
+  }
+  .light {
     position: absolute;
     margin: auto;
     inset: 0;
@@ -56,38 +69,38 @@ ocho.fullscreen,
     aspect-ratio: var(--ratio);
     transition: 0.5s;
     z-index: -1;
-}
-ocho video {
+  }
+  .ocho-player-container video {
     width: 100%;
     border-radius: inherit;
     transition: 150ms ease-in-out;
-}
-
-ocho.cinema video {
+  }
+  
+  .ocho-player-container.cinema video {
     height: 100%;
     max-width: 850px;
     border-radius: inherit;
-}
-
-ocho.fullscreen video {
+  }
+  
+  .ocho-player-container.fullscreen video {
     max-width: initial;
     max-height: 100%;
     width: 100%;
     background: radial-gradient(var(--hx), #000);
-}
-
-.video-controls-container {
+  }
+  
+  .video-controls-container {
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
     z-index: 100;
-    opacity: 0;
+    /* opacity: 0; */
     transition: opacity 150ms ease-in-out;
     border-radius: inherit;
-}
-
-.video-controls-container::before {
+  }
+  
+  .video-controls-container::before {
     content: "";
     position: absolute;
     left: 0;
@@ -98,45 +111,45 @@ ocho.fullscreen video {
     z-index: -1;
     pointer-events: none;
     border-radius: inherit;
-}
-
-ocho:hover .video-controls-container,
-ocho:focus-within .video-controls-container,
-ocho.paused .video-controls-container {
+  }
+  
+  .ocho-player-container:hover .video-controls-container,
+  .ocho-player-container:focus-within .video-controls-container,
+  .ocho-player-container.paused .video-controls-container {
     opacity: 1;
-}
-
-/* Caption text */
-video::cue {
+  }
+  
+  /* Caption text */
+  video::cue {
     opacity: 0;
-}
-
-.caption-text {
+  }
+  
+  .caption-text {
     position: absolute;
     bottom: 7px;
     z-index: 200;
     transition: 150ms ease-in-out;
     -webkit-user-select: none;
     user-select: none;
-}
-
-ocho:hover .caption-text,
-ocho:focus-within .caption-text,
-ocho.paused .caption-text {
+  }
+  
+  .ocho-player-container:hover .caption-text,
+  .ocho-player-container:focus-within .caption-text,
+  .ocho-player-container.paused .caption-text {
     bottom: 60px;
-}
-
-.caption-text mark {
+  }
+  
+  .caption-text mark {
     background: #0000008f;
     color: #fff;
-}
-
-.video-controls-container .controls .caption-btn {
+  }
+  
+  .video-controls-container .controls .caption-btn {
     position: relative;
-}
-
-.caption-btn::before {
-    content: '';
+  }
+  
+  .caption-btn::before {
+    content: "";
     position: absolute;
     transform: translateY(-50%);
     bottom: 0;
@@ -146,22 +159,22 @@ ocho.paused .caption-text {
     border-radius: 2px;
     background: dodgerblue;
     transition: 50ms ease-in-out;
-}
-
-.caption-btn.active::before {
+  }
+  
+  .caption-btn.active::before {
     width: 80%;
-}
-
-.video-controls-container .controls {
+  }
+  
+  .video-controls-container .controls {
     display: flex;
     gap: 0.5rem;
     padding: 0.25rem;
     align-items: center;
     overflow: hidden;
     width: 100%;
-}
-
-.video-controls-container .controls button {
+  }
+  
+  .video-controls-container .controls button {
     all: unset;
     background: none;
     border: none;
@@ -177,18 +190,18 @@ ocho.paused .caption-text {
     cursor: pointer;
     opacity: 0.85;
     transition: opacity 150ms ease-in-out;
-}
-
-.video-controls-container .controls button:hover {
+  }
+  
+  .video-controls-container .controls button:hover {
     opacity: 1;
-}
-
-.volume-container {
+  }
+  
+  .volume-container {
     display: flex;
     align-items: center;
-}
-
-.volume-container .volume-slider {
+  }
+  
+  .volume-container .volume-slider {
     width: 0;
     transform-origin: left;
     transform: scale(0);
@@ -202,9 +215,9 @@ ocho.paused .caption-text {
     cursor: pointer;
     overflow: hidden;
     transition: 150ms ease-in-out;
-}
-
-.volume-container .volume-slider::-webkit-slider-thumb {
+  }
+  
+  .volume-container .volume-slider::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
     width: 10px;
@@ -214,32 +227,32 @@ ocho.paused .caption-text {
     cursor: pointer;
     border: 2px solid #0f0f0f;
     box-shadow: -100px 0 0 95px currentColor;
-}
-
-.volume-container:hover .volume-slider {
+  }
+  
+  .volume-container:hover .volume-slider {
     width: 90px;
     transform: scale(1);
-}
-
-.duration-container {
+  }
+  
+  .duration-container {
     display: flex;
     align-items: center;
     gap: 0.25rem;
     flex-grow: 1;
     -webkit-user-select: none;
     user-select: none;
-}
-
-.timeline-container {
+  }
+  
+  .timeline-container {
     height: 7px;
     margin-inline: 0.5rem;
     cursor: pointer;
     display: flex;
     align-items: center;
     min-width: calc(100% - 1rem);
-}
-
-.timeline {
+  }
+  
+  .timeline {
     background: #64646480;
     height: 4px;
     width: 100%;
@@ -248,10 +261,10 @@ ocho.paused .caption-text {
     border-radius: 2px;
     -webkit-user-select: none;
     user-select: none;
-}
-
-.timeline::before,
-.timeline::after {
+  }
+  
+  .timeline::before,
+  .timeline::after {
     content: "";
     position: absolute;
     top: 0;
@@ -261,19 +274,19 @@ ocho.paused .caption-text {
     border-radius: inherit;
     z-index: 1;
     pointer-events: none;
-}
-
-.timeline::before {
+  }
+  
+  .timeline::before {
     right: calc(100% - var(--preview-hover-position) * 100%);
     display: none;
-}
-
-.timeline::after {
+  }
+  
+  .timeline::after {
     right: calc(100% - var(--progress-position) * 100%);
     background: dodgerblue;
-}
-
-.timeline .loaded-progress {
+  }
+  
+  .timeline .loaded-progress {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -281,13 +294,13 @@ ocho.paused .caption-text {
     left: 0;
     pointer-events: none;
     border-radius: inherit;
-}
-
-.timeline-container:hover .timeline::before {
+  }
+  
+  .timeline-container:hover .timeline::before {
     display: block;
-}
-
-.timeline .thumb-indicator {
+  }
+  
+  .timeline .thumb-indicator {
     --scale: 0;
     position: absolute;
     transform: translateX(-50%) scale(var(--scale));
@@ -300,17 +313,17 @@ ocho.paused .caption-text {
     transition: transform 150ms ease-in-out;
     pointer-events: none;
     z-index: 2;
-}
-
-.timeline-container:hover .thumb-indicator {
+  }
+  
+  .timeline-container:hover .thumb-indicator {
     --scale: 1;
-}
-
-.timeline-container:hover .timeline {
+  }
+  
+  .timeline-container:hover .timeline {
     height: 100%;
-}
-
-.timeline .preview-thumb {
+  }
+  
+  .timeline .preview-thumb {
     position: absolute;
     top: -120px;
     width: 160px;
@@ -324,29 +337,29 @@ ocho.paused .caption-text {
     user-select: none;
     pointer-events: none;
     opacity: 0;
-}
-
-.timeline:hover .preview-thumb {
+  }
+  
+  .timeline:hover .preview-thumb {
     opacity: 1;
-}
-
-.preview-thumb::before {
+  }
+  
+  .preview-thumb::before {
     content: attr(data-time);
     position: absolute;
     bottom: -25px;
     left: 50%;
     transform: translateX(-50%);
-}
-
-.preview-thumb div {
+  }
+  
+  .preview-thumb div {
     width: 100%;
     height: 100%;
     background: var(--thumbnail-bg);
     background-position: var(--thumblail-pos-x) var(--thumblail-pos-y);
-}
-
-.loader {
-    --uib-size: 100px;
+  }
+  
+  .loader {
+    --uib-size: 7.5rem;
     --uib-speed: 2s;
     --uib-color: dodgerblue;
     position: absolute;
@@ -362,14 +375,14 @@ ocho.paused .caption-text {
     scale: 1;
     opacity: 1;
     transition: scale 150ms ease-in-out;
-}
-
-.loader.active {
+  }
+  
+  .loader.active {
     scale: 0;
     opacity: 0;
-}
-
-.loader circle {
+  }
+  
+  .loader circle {
     fill: none;
     stroke: var(--uib-color);
     stroke-dasharray: 1, 200;
@@ -377,41 +390,40 @@ ocho.paused .caption-text {
     stroke-linecap: round;
     stroke-width: 3;
     animation: stretch calc(var(--uib-speed) * 0.75) ease-in-out infinite;
-}
-
-@keyframes rotate {
+  }
+  
+  @keyframes rotate {
     100% {
-        transform: rotate(360deg) #ffffffbf
+      transform: rotate(360deg) #ffffffbf;
     }
-}
-
-@keyframes stretch {
+  }
+  
+  @keyframes stretch {
     0% {
-        stroke-dasharray: 1, 200;
-        stroke-dashoffset: 0;
+      stroke-dasharray: 1, 200;
+      stroke-dashoffset: 0;
     }
-
+  
     50% {
-        stroke-dasharray: 90, 200;
-        stroke-dashoffset: -35px;
+      stroke-dasharray: 90, 200;
+      stroke-dashoffset: -35px;
     }
-
+  
     100% {
-        stroke-dashoffset: -124px;
+      stroke-dashoffset: -124px;
     }
-}
-
-.auto-play {
-    width: 24px;
-    height: 13px;
-    border-radius: 20px;
+  }
+  
+  .auto-play {
+    width: 1.5rem;
+    height: .8125rem;
+    border-radius: 1.25rem;
     position: relative;
     background: #909090cc;
-    font-size: 10px;
     font-size: 0.8em;
-}
-
-.auto-play::before {
+  }
+  
+  .auto-play::before {
     content: "\f04c";
     position: absolute;
     left: -3px;
@@ -429,29 +441,29 @@ ocho.paused .caption-text {
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    font-family: "Ocho";
+    font-family: ".ocho-player-container";
     cursor: pointer;
     transition: 150ms ease-in-out;
-}
-
-.auto-play.active::before {
+  }
+  
+  .auto-play.active::before {
     content: "\f04b";
     left: initial;
     right: -3px;
     color: #000;
     background: #fff;
-}
-
-.settings-btn svg {
+  }
+  
+  .settings-btn svg {
     transform: rotate(0);
     transition: 150ms ease-in-out;
-}
-
-.settings-btn.active svg {
+  }
+  
+  .settings-btn.active svg {
     transform: rotate(30deg);
-}
-
-.settings-menu {
+  }
+  
+  .settings-menu {
     position: absolute;
     right: 10px;
     bottom: 65px;
@@ -461,88 +473,87 @@ ocho.paused .caption-text {
     z-index: 20;
     -webkit-user-select: none;
     user-select: none;
-}
-
-.settings-menu.active {
+  }
+  
+  .settings-menu.active {
     opacity: 1;
     visibility: visible;
-}
-
-.settings-menu .wrapper {
+  }
+  
+  .settings-menu .wrapper {
     display: flex;
     justify-content: space-between;
-    width: 200px;
-    background: #1c1c1ccc;
-    border-radius: 5px;
-    padding: 5px 1px;
+    width: 15rem;
+    background: #1f1f1fcc;
+    border-radius: .75rem;
+    padding: .75rem 0;
     white-space: nowrap;
     overflow: hidden;
-}
-
-.settings-menu .wrapper ::-webkit-scrollbar {
+  }
+  
+  .settings-menu .wrapper ::-webkit-scrollbar {
     -webkit-appearance: none;
     appearance: none;
     background: transparent;
     width: 5px;
     height: 5px;
-}
-
-.settings-menu ::-webkit-scrollbar-thumb {
+  }
+  
+  .settings-menu ::-webkit-scrollbar-thumb {
     appearance: none;
     background: cornsilk;
     border-radius: 3px;
-}
-
-.settings-menu .drop {
+  }
+  
+  .settings-menu .drop {
     transition: 0.2s;
-    max-height: 200px;
+    max-height: 15rem;
     width: 100%;
     overflow-y: auto;
     overflow-x: hidden;
     display: none;
-}
-
-.settings-menu .drop.active {
+  }
+  
+  .settings-menu .drop.active {
     display: block;
-}
-
-.settings-menu .main-section {
+  }
+  
+  .settings-menu .main-section {
     margin-left: 0;
-}
-
-.settings-menu:has(.drop.active) .main-section {
-    margin-left: -220px;
-}
-
-.settings-menu ul {
-    width: 200px;
+  }
+  
+  .settings-menu:has(.drop.active) .main-section {
+    margin-left: -16rem;
+  }
+  
+  .settings-menu ul {
+    width: 15rem;
     transition: 0.2s;
-}
-
-.settings-menu ul li,
-.settings-menu ul li>label {
+  }
+  
+  .settings-menu ul li,
+  .settings-menu ul li > label {
     position: relative;
     display: flex;
     align-items: center;
-    gap: 5px;
+    gap: .25rem;
     width: 100%;
-    border-radius: 5px;
-    padding: 3px 5px;
+    padding: .5rem;
     font-size: 0.8em;
     color: #fff8dc;
     cursor: pointer;
-}
-
-.settings-menu ul li>label {
+  }
+  
+  .settings-menu ul li > label {
     font-size: 1em;
     padding: 0;
-}
-
-.settings-menu ul li:hover {
-    background: #c0c0c066;
-}
-
-.settings-menu .label {
+  }
+  
+  .settings-menu ul li:hover {
+    background: #696f7a6b;
+  }
+  
+  .settings-menu .label {
     position: relative;
     display: flex;
     align-items: center;
@@ -554,138 +565,199 @@ ocho.paused .caption-text {
     border-bottom: 1px solid #fff;
     padding-bottom: 10px;
     margin-bottom: 5px;
-}
-
-.cl-switch {
+  }
+  
+  .cl-switch {
     position: relative;
-    right: 20px;
+    right: .8rem;
     display: inline-block;
-}
-
-/* Input */
-.cl-switch>input {
+  }
+  
+  /* Input */
+  .cl-switch > input {
     appearance: none;
     -moz-appearance: none;
     -webkit-appearance: none;
     z-index: -1;
     position: absolute;
-}
-
-/* Track */
-.cl-switch>span::before {
+  }
+  
+  /* Track */
+  .cl-switch > span::before {
     content: "";
     display: inline-block;
-    margin: 5px 0 5px 10px;
-    border-radius: 7px;
-    width: 30px;
-    height: 12px;
+    margin: .24rem 0;
+    border-radius: 0.4375rem;
+    width: 1.75rem;
+    height: .78rem;
     background-color: #00000061;
     transition: background-color 0.2s, opacity 0.2s;
-}
-
-/* Thumb */
-.cl-switch>span::after {
+  }
+  
+  /* Thumb */
+  .cl-switch > span::after {
     content: "";
     position: absolute;
-    top: 2px;
-    right: 16px;
+    top: .125rem;
+    right: 1rem;
     border-radius: 50%;
-    width: 17px;
-    height: 17px;
+    width: 1.025rem;
+    height: 1.025rem;
     background-color: #fff;
-    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+      0 1px 5px 0 rgba(0, 0, 0, 0.12);
     transition: background-color 0.2s, transform 0.2s;
-}
-
-/* Checked */
-.cl-switch>input:checked+span::before {
+  }
+  
+  /* Checked */
+  .cl-switch > input:checked + span::before {
     background-color: #73b4f5c2;
-}
-
-.cl-switch>input:checked+span::after {
+  }
+  
+  .cl-switch > input:checked + span::after {
     background-color: #1e90ff;
-    transform: translateX(16px);
-}
-
-
-.cl-switch>input:checked:active+span::before {
+    transform: translateX(1rem);
+  }
+  
+  .cl-switch > input:checked:active + span::before {
     background-color: #73b4f5c2;
-}
-
-.settings-menu .check {
+  }
+  
+  .settings-menu .check {
     position: relative;
-    width: 24px;
-    height: 24px;
-}
-
-.settings-menu .check.active::before {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+  
+  .settings-menu .check.active::before {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    content: '\f058';
-    font-family: "Ocho";
-}
-
-.settings-menu .arrow {
+    content: "\f058";
+    font-family: ".ocho-player-container";
+  }
+  
+  .settings-menu .arrow {
     position: absolute;
     right: 5px;
     pointer-events: none;
-    width: 17px;
-    height: 17px;
+    width: 1rem;
+    height: 1rem;
     display: flex;
     align-items: center;
-}
-
-.drop .back-icon {
+  }
+  
+  .drop .back-icon {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.drop span {
+  }
+  
+  .drop span {
     margin-right: 15px;
-}
-
-.info-drop {
+  }
+  
+  .info-drop {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 5px;
     padding: 5px 0;
-}
-
-.info-drop .channel-profile {
+    font-weight: bold;
+  }
+  
+  .info-drop .channel-profile {
     width: 50px;
     height: 50px;
     aspect-ratio: 1;
     border-radius: 50%;
     overflow: hidden;
     outline: 5px solid #1e90ff66;
-}
-.info-drop .channel-profile img{
+  }
+  .info-drop .channel-profile img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-@font-face {
-    font-family: "Ocho";
+  }
+  .info-drop .user-btns {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+  .info-drop .user-btn {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    outline: transparent;
+    border-radius: 50%;
+    width: 2.5rem;
+    height: 2.5rem;
+    transition: 150ms ease-in-out;
+    cursor: pointer;
+    color: #f4faff;
+  }
+  .user-btn.portfolio {
+    background: #f4faff;
+    color: #06acfb;
+  }
+  .user-btn.youtube {
+    background: #f03;
+  }
+  .user-btn.github {
+    background: #24292f;
+  }
+  .user-btn.facebook {
+    background: #0266ff;
+  }
+  .user-btn .icon {
+    width: 70%;
+    height: 70%;
+    position: relative;
+    top: 0;
+    left: 0;
+  }
+  .user-btn .icon svg {
+    width: 100%;
+    height: 100%;
+  }
+  .user-btn .text {
+    transition: 150ms ease-in-out;
+  }
+  .user-btn:not(:hover) .text {
+    visibility: hidden;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+    position: absolute;
+  }
+  .info-drop .user-btn:hover {
+    border-radius: 2rem;
+    width: 7rem;
+    max-width: 100%;
+    height: 2.5rem;
+  }
+  
+  @font-face {
+    font-family: ".ocho-player-container";
     src: url(fonts/icon.woff2) format("woff2"),
-        url(fonts/icon.ttf) format("truetype");
-}
-
-@media (max-width:400px) {
-    ocho {
-        width: 100%;
-        border-radius: 0;
+      url(fonts/icon.ttf) format("truetype");
+  }
+  
+  @media (max-width: 400px) {
+    .ocho-player-container {
+      width: 100%;
+      border-radius: 0;
     }
-
+  
     .video-controls-container .controls .desktop-item {
-        display: none;
+      display: none;
     }
-
+  
     .video-controls-container .settings-menu .desktop-item {
-        display: none;
+      display: none;
     }
-}
+  }
+  
