--- a/style.css
+++ b/style.css
@@ -81,10 +81,10 @@ code a{
 .comment {
     color: #0088fa;
 }
-ocho{
+ocho-player{
     margin-top: 30px;
-    outline: 3px solid #0088fa;
-    border-radius: .2em;
+    outline: 1px solid blueviolet;
+    border-radius: .5rem;
     max-width: 800px;
 }
 a {
