--- a/player.css
+++ b/player.css
@@ -95,7 +95,7 @@
     left: 0;
     right: 0;
     z-index: 100;
-    /* opacity: 0; */
+    opacity: 0;
     transition: opacity 150ms ease-in-out;
     border-radius: inherit;
   }
