--- a/player.css
+++ b/player.css
@@ -441,7 +441,7 @@ video::cue {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  font-family: ".ocho-player-container";
+  font-family: "ocho-font";
   cursor: pointer;
   transition: 150ms ease-in-out;
 }
@@ -634,7 +634,7 @@ video::cue {
   top: 50%;
   transform: translateY(-50%);
   content: "\f058";
-  font-family: ".ocho-player-container";
+  font-family: "ocho-font";
 }
 
 .settings-menu .arrow {
@@ -741,9 +741,9 @@ video::cue {
 }
 
 @font-face {
-  font-family: ".ocho-player-container";
-  src: url(https://ochokom.github.io/ocho-video-player/fonts/icon.woff2) format("woff2"),
-    url(https://ochokom.github.io/ocho-video-player/fonts/icon.ttf) format("truetype");
+  font-family: "ocho-font";
+  src: url(fonts/icon.woff2) format("woff2"),
+    url(fonts/icon.ttf) format("truetype");
 }
 
 @media (max-width: 400px) {
