--- a/player.css
+++ b/player.css
@@ -423,17 +423,18 @@ video::cue {
   font-size: 0.8em;
 }
 
-.auto-play::before {
-  content: "\f04c";
+.auto-play span {
   position: absolute;
   left: -3px;
-  right: 15px;
+  right: 1rem;
   top: 50%;
   transform: translateY(-50%);
-  width: 16px;
-  height: 16px;
+  width: 1rem;
+  height: 1rem;
+  max-width: 1rem;
   aspect-ratio: 1;
   font-size: 10px;
+  padding: .1rem;
   color: #fff;
   background: #505050;
   text-align: center;
@@ -441,13 +442,11 @@ video::cue {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  font-family: "ocho-font";
   cursor: pointer;
   transition: 150ms ease-in-out;
 }
 
-.auto-play.active::before {
-  content: "\f04b";
+.auto-play.active span {
   left: initial;
   right: -3px;
   color: #000;
@@ -742,8 +741,8 @@ video::cue {
 
 @font-face {
   font-family: "ocho-font";
-  src: url(fonts/icon.woff2) format("woff2"),
-    url(fonts/icon.ttf) format("truetype");
+  src: url(./fonts/icon.woff2) format("woff2"),
+    url(./fonts/icon.ttf) format("truetype");
 }
 
 @media (max-width: 400px) {
