--- a/player.css
+++ b/player.css
@@ -85,6 +85,7 @@ ocho-player.cinema {
 .ocho-player-container.fullscreen video {
   max-width: initial;
   max-height: 100%;
+  height: 100%;
   width: 100%;
   background: radial-gradient(var(--hx), #000);
 }
