--- a/mobile-player.css
+++ b/mobile-player.css
@@ -1,7 +1,3 @@
-.ocho-player-container a {
-  text-decoration: none;
-}
-
 ocho-player {
   display: block;
   width: 90%;
@@ -10,39 +6,46 @@ ocho-player {
   background: #00000040;
 }
 
-.ocho-player-container,
-.ocho-player-container * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+ocho-player-container.youtube-player{
+  aspect-ratio: 16/9;
+  max-height: 80vh;
+  min-width: 600px;
+}
+.ocho-player-container a {
+  text-decoration: none;
 }
 .ocho-player-container {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  color: #f0f0f0;
   position: relative;
-  min-width: 10rem;
-  max-width: 100%;
-  max-height: 100%;
-  aspect-ratio: var(--video-ratio, 16/9);
-  border-radius: inherit;
-  display: flex;
-  justify-content: center;
-  margin-inline: auto;
-  transition: 150ms ease-in-out;
 }
+.ocho-player-container,
 .ocho-player-container * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+.ocho-player-container {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #f0f0f0;
+  position: relative;
+  background: #00000062;
+  width: 90%;
+  max-width: 850px;
+  max-height: 90vh;
+  border-radius: inherit;
+  display: flex;
+  justify-content: center;
+  margin-inline: auto;
+  background: #000000dd;
+  transition: 150ms ease-in-out;
+  z-index: 300;
+}
 .ocho-player-container.fullscreen,
 .player.fullscreen,
 ocho-player.cinema {
   max-width: initial;
   width: 100%;
-  display: block;
   transition: 150ms ease-in-out;
   border-radius: 0;
 }
@@ -78,7 +81,6 @@ ocho-player.cinema {
 }
 
 .ocho-player-container.cinema video {
-  height: 100%;
   max-width: 850px;
   border-radius: inherit;
 }
@@ -86,7 +88,6 @@ ocho-player.cinema {
 .ocho-player-container.fullscreen video {
   max-width: initial;
   max-height: 100%;
-  height: 100%;
   width: 100%;
   background: radial-gradient(var(--hx), #000);
 }
@@ -100,6 +101,11 @@ ocho-player.cinema {
   opacity: 0;
   transition: opacity 150ms ease-in-out;
   border-radius: inherit;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  pointer-events: none;
 }
 
 .video-controls-container::before {
@@ -107,17 +113,17 @@ ocho-player.cinema {
   position: absolute;
   left: 0;
   bottom: 0;
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.75), transparent);
+  background: linear-gradient(to top, #000000bf, transparent, #000000bf);
+  height: 100%;
   width: 100%;
   aspect-ratio: 6/1;
-  z-index: -1;
+  z-index: -2;
   pointer-events: none;
   border-radius: inherit;
 }
-
-.ocho-player-container:hover .video-controls-container,
-.ocho-player-container:focus-within .video-controls-container,
+.ocho-player-container.control .video-controls-container,
 .ocho-player-container.paused .video-controls-container {
+  pointer-events: all;
   opacity: 1;
 }
 
@@ -128,17 +134,13 @@ video::cue {
 
 .caption-text {
   position: absolute;
-  bottom: 7px;
+  bottom: 40px;
   z-index: 200;
   transition: 150ms ease-in-out;
   -webkit-user-select: none;
   user-select: none;
-}
-
-.ocho-player-container:hover .caption-text,
-.ocho-player-container:focus-within .caption-text,
-.ocho-player-container.paused .caption-text {
-  bottom: 60px;
+  text-align: center;
+  font-size: 0.8em;
 }
 
 .caption-text mark {
@@ -166,14 +168,31 @@ video::cue {
 .caption-btn.active::before {
   width: 80%;
 }
-
+.ocho-player-container .overlay {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 2;
+}
+.video-controls-container .overlay {
+  z-index: -1;
+}
 .video-controls-container .controls {
   display: flex;
   gap: 0.5rem;
   padding: 0.25rem;
   align-items: center;
-  overflow: hidden;
   width: 100%;
+}
+.video-controls-container .controls.center {
+  position: absolute;
+  top: 50%;
+  transform: translatey(-50%);
+  justify-content: space-around;
+}
+.video-controls-container .controls.bottom {
+  flex-direction: column;
+  padding-bottom: 1rem;
 }
 
 .video-controls-container .controls button {
@@ -190,17 +209,35 @@ video::cue {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  opacity: 0.85;
+  opacity: 0.9;
   transition: opacity 150ms ease-in-out;
+}
+.video-controls-container .controls button.play-pause-btn {
+  height: 50px;
+  width: 50px;
 }
 
 .video-controls-container .controls button:hover {
+  opacity: 1;
+}
+.video-controls-container .controls .next-btn,
+.video-controls-container .controls .prev-btn,
+.video-controls-container .controls .next-btn:not(.active):hover,
+.video-controls-container .controls .prev-btn:not(.active):hover {
+  opacity: 0.5;
+  transition: opacity 150ms ease-in-out;
+}
+.video-controls-container .controls .next-btn.active,
+.video-controls-container .controls .prev-btn.active {
   opacity: 1;
 }
 
 .volume-container {
   display: flex;
   align-items: center;
+}
+.controls.top .volume-container {
+  flex-grow: 1;
 }
 
 .volume-container .volume-slider {
@@ -317,11 +354,13 @@ video::cue {
   z-index: 2;
 }
 
-.timeline-container:hover .thumb-indicator {
+.timeline-container:hover .thumb-indicator,
+.timeline-container.hover .thumb-indicator {
   --scale: 1;
 }
 
-.timeline-container:hover .timeline {
+.timeline-container:hover .timeline,
+.timeline-container.hover .timeline {
   height: 100%;
 }
 
@@ -341,7 +380,8 @@ video::cue {
   opacity: 0;
 }
 
-.timeline:hover .preview-thumb {
+.timeline:hover .preview-thumb,
+.timeline-container.hover .preview-thumb {
   opacity: 1;
 }
 
@@ -361,7 +401,7 @@ video::cue {
 }
 
 .loader {
-  --uib-size: 7.5rem;
+  --uib-size: 100px;
   --uib-speed: 2s;
   --uib-color: dodgerblue;
   position: absolute;
@@ -417,8 +457,8 @@ video::cue {
 }
 
 .auto-play {
-  width: 1.5rem;
-  height: 0.8125rem;
+  width: 2rem;
+  height: 1rem;
   border-radius: 1.25rem;
   position: relative;
   background: #909090cc;
@@ -431,9 +471,9 @@ video::cue {
   right: 1rem;
   top: 50%;
   transform: translateY(-50%);
-  width: 1rem;
-  height: 1rem;
-  max-width: 1rem;
+  width: 1.25rem;
+  height: 1.25rem;
+  max-width: 1.25rem;
   aspect-ratio: 1;
   font-size: 10px;
   padding: 0.1rem;
@@ -453,6 +493,7 @@ video::cue {
   right: -3px;
   color: #000;
   background: #fff;
+  transition: 150ms ease-in-out;
 }
 
 .settings-btn svg {
@@ -467,16 +508,18 @@ video::cue {
 .settings-menu {
   position: absolute;
   right: 10px;
-  bottom: 65px;
   opacity: 0;
   visibility: hidden;
   transition: opacity 50ms ease-in-out;
   z-index: 20;
   -webkit-user-select: none;
   user-select: none;
+  pointer-events: none;
+  max-height: 80%;
 }
 
 .settings-menu.active {
+  pointer-events: all;
   opacity: 1;
   visibility: visible;
 }
@@ -489,7 +532,7 @@ video::cue {
   border-radius: 0.75rem;
   padding: 0.75rem 0;
   white-space: nowrap;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .settings-menu .wrapper ::-webkit-scrollbar {
@@ -508,7 +551,7 @@ video::cue {
 
 .settings-menu .drop {
   transition: 0.2s;
-  max-height: 15rem;
+  /* max-height: 15rem; */
   width: 100%;
   overflow-y: auto;
   overflow-x: hidden;
@@ -626,8 +669,8 @@ video::cue {
 
 .settings-menu .check {
   position: relative;
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 24px;
+  height: 24px;
 }
 
 .settings-menu .check.active::before {
@@ -635,7 +678,7 @@ video::cue {
   top: 50%;
   transform: translateY(-50%);
   content: "\f058";
-  font-family: "ocho-font";
+  font-family: "Ocho";
 }
 
 .settings-menu .arrow {
@@ -665,7 +708,6 @@ video::cue {
   flex-direction: column;
   gap: 5px;
   padding: 5px 0;
-  font-weight: bold;
 }
 
 .info-drop .channel-profile {
@@ -742,31 +784,36 @@ video::cue {
 }
 
 @font-face {
-  font-family: "ocho-font";
-  src: url(./fonts/icon.woff2) format("woff2"),
-    url(./fonts/icon.ttf) format("truetype");
+  font-family: "Ocho";
+  src: url(fonts/icon.woff2) format("woff2"),
+    url(fonts/icon.ttf) format("truetype");
 }
-
+@media (min-width: 400px){
+    .settings-menu{
+        top: 10%;
+    }
+}
 @media (max-width: 400px) {
+  ocho-player,
   .ocho-player-container {
     width: 100%;
-    border-radius: 0;
+    border-radius: inherit;
   }
-
-  .video-controls-container .controls .desktop-item {
-    display: none;
+  .settings-menu {
+    position: fixed;
+    right: 15px;
+    left: 15px;
+    bottom: 15px;
+    z-index: 3000;
   }
-
-  .video-controls-container .settings-menu .desktop-item {
-    display: none;
+  .settings-menu .wrapper {
+    width: 100%;
+    background: #1c1c1c;
   }
-  .ocho-player-container .settings-menu {
-    inset: auto;
-    right: 0;
-    top: -3rem;
+  .settings-menu ul {
+    width: 100%;
   }
-  .ocho-player-container.fullscreen .settings-menu {
-    top: initial;
-    bottom: 150%;
+  .settings-menu:has(.drop.active) .main-section {
+    margin-left: calc(0px - calc(100% + 20px));
   }
 }
