--- a/player.css
+++ b/player.css
@@ -743,8 +743,8 @@ video::cue {
 
 @font-face {
   font-family: "ocho-font";
-  src: url(./fonts/icon.woff2) format("woff2"),
-    url(./fonts/icon.ttf) format("truetype");
+  src: url(https://ochokom.github.io/ocho-video-player/fonts/icon.woff2) format("woff2"),
+    url(https://ochokom.github.io/ocho-video-player/fonts/icon.ttf) format("truetype");
 }
 
 @media (max-width: 400px) {
