--- a/mobile-player.css
+++ b/mobile-player.css
@@ -6,17 +6,20 @@ ocho-player {
   background: #00000040;
 }
 
-ocho-player-container.youtube-player{
+ocho-player-container.youtube-player {
   aspect-ratio: 16/9;
   max-height: 80vh;
   min-width: 600px;
 }
+
 .ocho-player-container a {
   text-decoration: none;
 }
+
 .ocho-player-container {
   position: relative;
 }
+
 .ocho-player-container,
 .ocho-player-container * {
   margin: 0;
@@ -41,6 +44,7 @@ ocho-player-container.youtube-player{
   transition: 150ms ease-in-out;
   z-index: 300;
 }
+
 .ocho-player-container.fullscreen,
 .player.fullscreen,
 ocho-player.cinema {
@@ -54,10 +58,12 @@ ocho-player.cinema {
 .player.cinema {
   max-height: 80vh;
 }
+
 .ocho-player-container.fullscreen,
 .player.fullscreen {
   max-height: 100vh;
 }
+
 .light {
   position: absolute;
   margin: auto;
@@ -74,6 +80,7 @@ ocho-player.cinema {
   transition: 0.5s;
   z-index: -1;
 }
+
 .ocho-player-container video {
   width: 100%;
   border-radius: inherit;
@@ -121,6 +128,7 @@ ocho-player.cinema {
   pointer-events: none;
   border-radius: inherit;
 }
+
 .ocho-player-container.control .video-controls-container,
 .ocho-player-container.paused .video-controls-container {
   pointer-events: all;
@@ -168,15 +176,18 @@ video::cue {
 .caption-btn.active::before {
   width: 80%;
 }
+
 .ocho-player-container .overlay {
   height: 100%;
   width: 100%;
   position: absolute;
   z-index: 2;
 }
+
 .video-controls-container .overlay {
   z-index: -1;
 }
+
 .video-controls-container .controls {
   display: flex;
   gap: 0.5rem;
@@ -184,12 +195,14 @@ video::cue {
   align-items: center;
   width: 100%;
 }
+
 .video-controls-container .controls.center {
   position: absolute;
   top: 50%;
   transform: translatey(-50%);
   justify-content: space-around;
 }
+
 .video-controls-container .controls.bottom {
   flex-direction: column;
   padding-bottom: 1rem;
@@ -212,6 +225,7 @@ video::cue {
   opacity: 0.9;
   transition: opacity 150ms ease-in-out;
 }
+
 .video-controls-container .controls button.play-pause-btn {
   height: 50px;
   width: 50px;
@@ -220,6 +234,7 @@ video::cue {
 .video-controls-container .controls button:hover {
   opacity: 1;
 }
+
 .video-controls-container .controls .next-btn,
 .video-controls-container .controls .prev-btn,
 .video-controls-container .controls .next-btn:not(.active):hover,
@@ -227,6 +242,7 @@ video::cue {
   opacity: 0.5;
   transition: opacity 150ms ease-in-out;
 }
+
 .video-controls-container .controls .next-btn.active,
 .video-controls-container .controls .prev-btn.active {
   opacity: 1;
@@ -236,6 +252,7 @@ video::cue {
   display: flex;
   align-items: center;
 }
+
 .controls.top .volume-container {
   flex-grow: 1;
 }
@@ -576,7 +593,7 @@ video::cue {
 }
 
 .settings-menu ul li,
-.settings-menu ul li > label {
+.settings-menu ul li>label {
   position: relative;
   display: flex;
   align-items: center;
@@ -588,7 +605,7 @@ video::cue {
   cursor: pointer;
 }
 
-.settings-menu ul li > label {
+.settings-menu ul li>label {
   font-size: 1em;
   padding: 0;
 }
@@ -618,7 +635,7 @@ video::cue {
 }
 
 /* Input */
-.cl-switch > input {
+.cl-switch>input {
   appearance: none;
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -627,7 +644,7 @@ video::cue {
 }
 
 /* Track */
-.cl-switch > span::before {
+.cl-switch>span::before {
   content: "";
   display: inline-block;
   margin: 0.24rem 0;
@@ -639,7 +656,7 @@ video::cue {
 }
 
 /* Thumb */
-.cl-switch > span::after {
+.cl-switch>span::after {
   content: "";
   position: absolute;
   top: 0.125rem;
@@ -654,16 +671,16 @@ video::cue {
 }
 
 /* Checked */
-.cl-switch > input:checked + span::before {
+.cl-switch>input:checked+span::before {
   background-color: #73b4f5c2;
 }
 
-.cl-switch > input:checked + span::after {
+.cl-switch>input:checked+span::after {
   background-color: #1e90ff;
   transform: translateX(1rem);
 }
 
-.cl-switch > input:checked:active + span::before {
+.cl-switch>input:checked:active+span::before {
   background-color: #73b4f5c2;
 }
 
@@ -718,16 +735,19 @@ video::cue {
   overflow: hidden;
   outline: 5px solid #1e90ff66;
 }
+
 .info-drop .channel-profile img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
+
 .info-drop .user-btns {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
 }
+
 .info-drop .user-btn {
   position: relative;
   display: flex;
@@ -742,19 +762,24 @@ video::cue {
   cursor: pointer;
   color: #f4faff;
 }
+
 .user-btn.portfolio {
   background: #f4faff;
   color: #06acfb;
 }
+
 .user-btn.youtube {
   background: #f03;
 }
+
 .user-btn.github {
   background: #24292f;
 }
+
 .user-btn.facebook {
   background: #0266ff;
 }
+
 .user-btn .icon {
   width: 70%;
   height: 70%;
@@ -762,13 +787,16 @@ video::cue {
   top: 0;
   left: 0;
 }
+
 .user-btn .icon svg {
   width: 100%;
   height: 100%;
 }
+
 .user-btn .text {
   transition: 150ms ease-in-out;
 }
+
 .user-btn:not(:hover) .text {
   visibility: hidden;
   width: 0;
@@ -776,6 +804,7 @@ video::cue {
   overflow: hidden;
   position: absolute;
 }
+
 .info-drop .user-btn:hover {
   border-radius: 2rem;
   width: 7rem;
@@ -787,18 +816,24 @@ video::cue {
   font-family: "Ocho";
   src: url(https://ochokom.github.io/ocho-video-player/fonts/icon.woff2) format("woff2"),
     url(https://ochokom.github.io/ocho-video-player/fonts/icon.ttf) format("truetype");
+  src: url(fonts/icon.woff2) format("woff2"),
+    url(fonts/icon.ttf) format("truetype");
 }
-@media (min-width: 400px){
-    .settings-menu{
-        top: 10%;
-    }
+
+@media (min-width: 400px) {
+  .settings-menu {
+    top: 10%;
+  }
 }
+
 @media (max-width: 400px) {
+
   ocho-player,
   .ocho-player-container {
     width: 100%;
     border-radius: inherit;
   }
+
   .settings-menu {
     position: fixed;
     right: 15px;
@@ -806,13 +841,16 @@ video::cue {
     bottom: 15px;
     z-index: 3000;
   }
+
   .settings-menu .wrapper {
     width: 100%;
     background: #1c1c1c;
   }
+
   .settings-menu ul {
     width: 100%;
   }
+
   .settings-menu:has(.drop.active) .main-section {
     margin-left: calc(0px - calc(100% + 20px));
   }
